after part of refactor, prepare to update agent.