@@ -1,49 +1,39 @@
 package com.shootingplace.shootingplace.license;
 
-import com.shootingplace.shootingplace.exceptions.NoUserPermissionException;
 import com.shootingplace.shootingplace.history.*;
 import com.shootingplace.shootingplace.member.Member;
 import com.shootingplace.shootingplace.member.MemberDTO;
 import com.shootingplace.shootingplace.member.MemberEntity;
 import com.shootingplace.shootingplace.member.MemberRepository;
+import com.shootingplace.shootingplace.security.UserAuthService;
+import com.shootingplace.shootingplace.users.UserEntity;
 import com.shootingplace.shootingplace.utils.Mapping;
+import jakarta.persistence.EntityNotFoundException;
+import lombok.RequiredArgsConstructor;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.text.Collator;
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Locale;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class LicenseService {
 
     private final MemberRepository memberRepository;
     private final LicenseRepository licenseRepository;
     private final HistoryService historyService;
     private final LicensePaymentHistoryRepository licensePaymentHistoryRepository;
+    private final UserAuthService userAuthService;
+    private final ChangeHistoryService changeHistoryService;
     private final Logger LOG = LogManager.getLogger(getClass());
 
-
-    public LicenseService(MemberRepository memberRepository,
-                          LicenseRepository licenseRepository, HistoryService historyService, LicensePaymentHistoryRepository licensePaymentHistoryRepository) {
-        this.memberRepository = memberRepository;
-        this.licenseRepository = licenseRepository;
-        this.historyService = historyService;
-        this.licensePaymentHistoryRepository = licensePaymentHistoryRepository;
-    }
-
     public List<MemberDTO> getMembersNamesAndLicense() {
-        return memberRepository.findAllWhereCLubEquals1ErasedFalsePzssTrueLicenseValidTrue().stream()
-                .map(Mapping::map2DTO)
-                .sorted(Comparator.comparing(MemberDTO::getSecondName, pl()).thenComparing(MemberDTO::getFirstName, pl()))
-                .collect(Collectors.toList());
+        return memberRepository.findAllWhereCLubEquals1ErasedFalsePzssTrueLicenseValidTrue().stream().map(Mapping::map2DTO).sorted(Comparator.comparing(MemberDTO::getSecondName, pl()).thenComparing(MemberDTO::getFirstName, pl())).collect(Collectors.toList());
     }
 
     private static Collator pl() {
@@ -51,24 +41,18 @@ public class LicenseService {
     }
 
     public List<MemberDTO> getMembersNamesAndLicenseNotValid() {
-        return memberRepository.findAllWhereCLubEquals1ErasedFalsePzssTrueLicenseValidFalse().stream()
-                .map(Mapping::map2DTO)
-                .sorted(Comparator.comparing(MemberDTO::getSecondName, pl()).thenComparing(MemberDTO::getFirstName, pl()))
-                .collect(Collectors.toList());
+        return memberRepository.findAllWhereCLubEquals1ErasedFalsePzssTrueLicenseValidFalse().stream().map(Mapping::map2DTO).sorted(Comparator.comparing(MemberDTO::getSecondName, pl()).thenComparing(MemberDTO::getFirstName, pl())).collect(Collectors.toList());
     }
 
     public ResponseEntity<?> updateLicense(String memberUUID, License license) {
-        MemberEntity memberEntity = memberRepository.getOne(memberUUID);
+        MemberEntity memberEntity = memberRepository.findById(memberUUID).orElseThrow(EntityNotFoundException::new);
         LicenseEntity licenseEntity = memberEntity.getLicense();
         if (memberEntity.getShootingPatent().getPatentNumber() == null && memberEntity.isAdult()) {
             LOG.info("Brak Patentu");
             return ResponseEntity.badRequest().body("Brak Patentu");
         }
         if (licenseEntity.getNumber() != null) {
-            boolean match = memberRepository.findAllByErasedFalse()
-                    .stream()
-                    .filter(f -> f.getLicense().getNumber() != null)
-                    .anyMatch(f -> f.getLicense().getNumber().equals(license.getNumber()));
+            boolean match = memberRepository.findAllByErasedFalse().stream().filter(f -> f.getLicense().getNumber() != null).anyMatch(f -> f.getLicense().getNumber().equals(license.getNumber()));
             if (match && !licenseEntity.getNumber().equals(license.getNumber())) {
                 LOG.error("Ktoś już ma taki numer licencji");
                 return ResponseEntity.badRequest().body("Ktoś już ma taki numer licencji");
@@ -105,11 +89,11 @@ public class LicenseService {
             }
             LOG.info("zaktualizowano datę licencji");
         } else {
-            if (memberEntity.getHistory().getLicensePaymentHistory().size() > 0) {
-                Integer validForYear = memberEntity.getHistory().getLicensePaymentHistory().get(0).getValidForYear();
+            if (!memberEntity.getHistory().getLicensePaymentHistory().isEmpty()) {
+                Integer validForYear = memberEntity.getHistory().getLicensePaymentHistory().getFirst().getValidForYear();
                 licenseEntity.setValidThru(LocalDate.of(validForYear, 12, 31));
                 licenseEntity.setValid(true);
-                LOG.info("Brak ręcznego ustawienia daty, ustawiono na koniec bieżącego roku " + licenseEntity.getValidThru());
+                LOG.info("Brak ręcznego ustawienia daty, ustawiono na koniec bieżącego roku {}", licenseEntity.getValidThru());
             }
         }
         licenseEntity.setNumber(license.getNumber());
@@ -119,57 +103,92 @@ public class LicenseService {
         return ResponseEntity.ok("Zaktualizowano licencję");
     }
 
-    public ResponseEntity<?> updateLicense(String memberUUID, String number, LocalDate date, Boolean isPaid, Boolean pistol, Boolean rifle, Boolean shotgun, String pinCode) throws NoUserPermissionException {
-        if (!memberRepository.existsById(memberUUID)) {
-            return ResponseEntity.badRequest().body("Nie znaleziono Klubowicza");
-        }
-        MemberEntity memberEntity = memberRepository.getOne(memberUUID);
-        LicenseEntity licenseEntity = memberEntity.getLicense();
+    //
+//    public ResponseEntity<?> updateLicense(String memberUUID, String number, LocalDate date, Boolean isPaid, Boolean pistol, Boolean rifle, Boolean shotgun, String pinCode) throws NoUserPermissionException {
+//        if (!memberRepository.existsById(memberUUID)) {
+//            return ResponseEntity.badRequest().body("Nie znaleziono Klubowicza");
+//        }
+//        MemberEntity memberEntity = memberRepository.findById(memberUUID).orElseThrow(EntityNotFoundException::new);
+//        LicenseEntity licenseEntity = memberEntity.getLicense();
+//
+//        if (number != null && !number.isEmpty() && !number.equals("null")) {
+//
+//            boolean match = memberRepository.findAllByErasedFalse()
+//                    .stream()
+//                    .filter(f -> f.getLicense().getNumber() != null)
+//                    .anyMatch(f -> f.getLicense().getNumber().equals(number));
+//
+//            if (match && !licenseEntity.getNumber().equals(number)) {
+//                LOG.error("Ktoś już ma taki numer licencji");
+//                return ResponseEntity.badRequest().body("Ktoś już ma taki numer licencji");
+//            } else {
+//                licenseEntity.setNumber(number);
+//                LOG.info("Dodano numer licencji");
+//            }
+//
+//        }
+//        if (date != null) {
+//            licenseEntity.setValidThru(date);
+//            licenseEntity.setValid(licenseEntity.getValidThru().getYear() >= LocalDate.now().getYear());
+//        }
+//        if (isPaid != null) {
+//            licenseEntity.setPaid(isPaid);
+//        }
+//        if (pistol != null) {
+//            licenseEntity.setPistolPermission(pistol);
+//        }
+//        if (rifle != null) {
+//            licenseEntity.setRiflePermission(rifle);
+//        }
+//        if (shotgun != null) {
+//            licenseEntity.setShotgunPermission(shotgun);
+//        }
+//        ResponseEntity<?> response = historyService.getStringResponseEntityLicense(pinCode, licenseEntity, HttpStatus.OK, "updateLicense", "Poprawiono Licencję");
+//
+//        if (response.getStatusCode().equals(HttpStatus.OK)) {
+//            licenseRepository.save(licenseEntity);
+//        }
+//        return response;
+//
+//    }
+    public ResponseEntity<?> updateLicense(String memberUUID, String number, LocalDate date, Boolean isPaid, Boolean pistol, Boolean rifle, Boolean shotgun, String pinCode) {
 
-        if (number != null && !number.isEmpty() && !number.equals("null")) {
+        MemberEntity member = memberRepository.findById(memberUUID).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono Klubowicza"));
 
-            boolean match = memberRepository.findAllByErasedFalse()
-                    .stream()
-                    .filter(f -> f.getLicense().getNumber() != null)
-                    .anyMatch(f -> f.getLicense().getNumber().equals(number));
+        LicenseEntity license = member.getLicense();
 
-            if (match && !licenseEntity.getNumber().equals(number)) {
-                LOG.error("Ktoś już ma taki numer licencji");
+        if (number != null && !number.isBlank()) {
+            boolean exists = memberRepository.findAllByErasedFalse().stream().map(m -> m.getLicense().getNumber())
+                    .filter(Objects::nonNull).anyMatch(number::equals);
+
+            if (exists && !number.equals(license.getNumber())) {
                 return ResponseEntity.badRequest().body("Ktoś już ma taki numer licencji");
-            } else {
-                licenseEntity.setNumber(number);
-                LOG.info("Dodano numer licencji");
             }
-
+            license.setNumber(number);
         }
+
         if (date != null) {
-            licenseEntity.setValidThru(date);
-            licenseEntity.setValid(licenseEntity.getValidThru().getYear() >= LocalDate.now().getYear());
+            license.setValidThru(date);
+            license.setValid(date.getYear() >= LocalDate.now().getYear());
         }
-        if (isPaid != null && !isPaid.equals("null")) {
-            licenseEntity.setPaid(isPaid);
-        }
-        if (pistol != null) {
-            licenseEntity.setPistolPermission(pistol);
-        }
-        if (rifle != null) {
-            licenseEntity.setRiflePermission(rifle);
-        }
-        if (shotgun != null) {
-            licenseEntity.setShotgunPermission(shotgun);
-        }
-        ResponseEntity<?> response = historyService.getStringResponseEntityLicense(pinCode, licenseEntity, HttpStatus.OK, "updateLicense", "Poprawiono Licencję");
 
-        if (response.getStatusCode().equals(HttpStatus.OK)) {
-            licenseRepository.save(licenseEntity);
-        }
-        return response;
+        if (isPaid != null) license.setPaid(isPaid);
+        if (pistol != null) license.setPistolPermission(pistol);
+        if (rifle != null) license.setRiflePermission(rifle);
+        if (shotgun != null) license.setShotgunPermission(shotgun);
 
+        licenseRepository.save(license);
+
+        UserEntity user = userAuthService.getAuthenticatedUser(pinCode);
+        changeHistoryService.record(user, "License.update", license.getUuid());
+
+        return ResponseEntity.ok("Poprawiono licencję");
     }
+
 
     public ResponseEntity<?> prolongLicenseValid(String memberUUID, License license) {
 
-        MemberEntity memberEntity = memberRepository.getOne(memberUUID);
+        MemberEntity memberEntity = memberRepository.findById(memberUUID).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono Klubowicza"));
         LicenseEntity licenseEntity = memberEntity.getLicense();
 
 
@@ -231,72 +250,43 @@ public class LicenseService {
     }
 
     public License getLicense() {
-        return License.builder()
-                .number(null)
-                .validThru(null)
-                .pistolPermission(false)
-                .riflePermission(false)
-                .shotgunPermission(false)
-                .isValid(false)
-                .canProlong(false)
-                .isPaid(false)
-                .build();
+        return License.builder().number(null).validThru(null).pistolPermission(false).riflePermission(false).shotgunPermission(false).isValid(false).canProlong(false).isPaid(false).build();
     }
 
-    public ResponseEntity<?> prolongAllLicense(List<String> licenseList, String pinCode) throws NoUserPermissionException {
+    public ResponseEntity<?> prolongAllLicense(List<String> licenseList, String pinCode) {
         List<String> responseList = new ArrayList<>();
-        String s1 = "";
-
-        for (String s : licenseList) {
-            MemberEntity memberEntity = memberRepository.findById(s).orElse(null);
-            LicenseEntity licenseEntity;
-
-            if (memberEntity == null) {
-                LOG.info("Nie znaleziono osoby o podanym ID");
+        UserEntity user = userAuthService.getAuthenticatedUser(pinCode);
+        for (String memberUuid : licenseList) {
+            MemberEntity member = memberRepository.findById(memberUuid).orElse(null);
+            if (member == null) {
                 responseList.add("Nie znaleziono osoby");
-            } else {
-                if (memberEntity.getLicense() != null) {
-                    licenseEntity = memberEntity.getLicense();
-                    License license = Mapping.map(licenseEntity);
-                    ResponseEntity<?> responseEntity = prolongLicenseValid(s, license);
-                        String s2 = memberEntity.getFullName() + ": " + responseEntity.getBody()+";";
-                        responseList.add(s2);
-
-                } else {
-                    LOG.info(memberEntity.getSecondName() + " Nie posiada Licencji");
-                    responseList.add(memberEntity.getSecondName() + " Nie posiada licencji");
-                }
-                s1 = s1.concat(s);
-
+                continue;
+            }
+            LicenseEntity license = member.getLicense();
+            if (license == null) {
+                responseList.add(member.getFullName() + ": brak licencji");
+                continue;
+            }
+            try {
+                prolongLicenseValid(memberUuid, Mapping.map(license));
+                responseList.add(member.getFullName() + ": przedłużono licencję");
+                changeHistoryService.record(user, "License.prolong", license.getUuid());
+            } catch (Exception e) {
+                responseList.add(member.getFullName() + ": błąd przedłużania");
             }
         }
-        return historyService.getStringResponseEntityLicense(pinCode, null, HttpStatus.OK, "prolongAllLicense", responseList);
-
+        return ResponseEntity.ok(responseList);
     }
+
 
     public List<?> getAllLicencePayment() {
 
         List<LicensePaymentHistoryDTO> list1 = new ArrayList<>();
         licensePaymentHistoryRepository.findAllByPayInPZSSPortalFalse().forEach(e -> {
-            MemberEntity member = memberRepository.getOne(e.getMemberUUID());
-            list1.add(LicensePaymentHistoryDTO.builder()
-                    .paymentUuid(e.getUuid())
-                    .firstName(member.getFirstName())
-                    .secondName(member.getSecondName())
-                    .email(member.getEmail())
-                    .active(member.isActive())
-                    .adult(member.isAdult())
-                    .legitimationNumber(member.getLegitimationNumber())
-                    .memberUUID(member.getUuid())
-                    .isPayInPZSSPortal(e.isPayInPZSSPortal())
-                    .date(e.getDate())
-                    .licenseUUID(e.getUuid())
-                    .validForYear(e.getValidForYear())
-                    .isNew(e.isNew())
-                    .build());
+            MemberEntity memberEntity = memberRepository.findById(e.getMemberUUID()).orElseThrow(() -> new EntityNotFoundException("Nie znaleziono Klubowicza"));
+            list1.add(LicensePaymentHistoryDTO.builder().paymentUuid(e.getUuid()).firstName(memberEntity.getFirstName()).secondName(memberEntity.getSecondName()).email(memberEntity.getEmail()).active(memberEntity.isActive()).adult(memberEntity.isAdult()).legitimationNumber(memberEntity.getLegitimationNumber()).memberUUID(memberEntity.getUuid()).isPayInPZSSPortal(e.isPayInPZSSPortal()).date(e.getDate()).licenseUUID(e.getUuid()).validForYear(e.getValidForYear()).isNew(e.isNew()).build());
         });
-        return list1.stream()
-                .sorted(Comparator.comparing(LicensePaymentHistoryDTO::getSecondName, pl()).thenComparing(LicensePaymentHistoryDTO::getFirstName, pl())).collect(Collectors.toList());
+        return list1.stream().sorted(Comparator.comparing(LicensePaymentHistoryDTO::getSecondName, pl()).thenComparing(LicensePaymentHistoryDTO::getFirstName, pl())).collect(Collectors.toList());
     }
 
     public LicenseEntity getLicense(String LicenseUUID) {
@@ -304,42 +294,19 @@ public class LicenseService {
     }
 
     public List<LicensePaymentHistoryEntity> getLicensePaymentHistory(String MemberUUID) {
-        return memberRepository.getOne(MemberUUID).getHistory().getLicensePaymentHistory();
+        return memberRepository.findById(MemberUUID).orElseThrow(EntityNotFoundException::new).getHistory().getLicensePaymentHistory();
     }
 
     public List<?> allNoLicenseWithPayment() {
 
-        return memberRepository.findAllByErasedFalse()
-                .stream()
-                .filter(f -> f.getLicense().getNumber() == null && f.getHistory()
-                        .getLicensePaymentHistory().size() > 0)
-                .map(Mapping::map)
-                .sorted(Comparator.comparing(Member::getSecondName, pl()).thenComparing(Member::getFirstName, pl()))
-                .collect(Collectors.toList());
+        return memberRepository.findAllByErasedFalse().stream().filter(f -> f.getLicense().getNumber() == null && !f.getHistory().getLicensePaymentHistory().isEmpty()).map(Mapping::map).sorted(Comparator.comparing(Member::getSecondName, pl()).thenComparing(Member::getFirstName, pl())).collect(Collectors.toList());
     }
 
     public List<MemberDTO> allLicensesQualifyingToProlong() {
-        return memberRepository.findAllWhereCLubEquals1ErasedFalsePzssTrueLicenseValidTrue().stream()
-                .filter(f ->
-                        (f.getHistory().getPistolCounter() >= 4 && f.getHistory().getRifleCounter() >= 2 && f.getHistory().getShotgunCounter() >= 2) ||
-                                (f.getHistory().getPistolCounter() >= 2 && f.getHistory().getRifleCounter() >= 4 && f.getHistory().getShotgunCounter() >= 2) ||
-                                (f.getHistory().getPistolCounter() >= 2 && f.getHistory().getRifleCounter() >= 2 && f.getHistory().getShotgunCounter() >= 4)
-                )
-                .map(Mapping::map2DTO)
-                .sorted(Comparator.comparing(MemberDTO::getSecondName, pl()).thenComparing(MemberDTO::getFirstName, pl()))
-                .collect(Collectors.toList());
+        return memberRepository.findAllWhereCLubEquals1ErasedFalsePzssTrueLicenseValidTrue().stream().filter(f -> (f.getHistory().getPistolCounter() >= 4 && f.getHistory().getRifleCounter() >= 2 && f.getHistory().getShotgunCounter() >= 2) || (f.getHistory().getPistolCounter() >= 2 && f.getHistory().getRifleCounter() >= 4 && f.getHistory().getShotgunCounter() >= 2) || (f.getHistory().getPistolCounter() >= 2 && f.getHistory().getRifleCounter() >= 2 && f.getHistory().getShotgunCounter() >= 4)).map(Mapping::map2DTO).sorted(Comparator.comparing(MemberDTO::getSecondName, pl()).thenComparing(MemberDTO::getFirstName, pl())).collect(Collectors.toList());
     }
 
     public List<MemberDTO> allLicensesNotQualifyingToProlong() {
-        return memberRepository.findAllWhereCLubEquals1ErasedFalsePzssTrueLicenseValidTrue().stream()
-                .filter(f -> !f.getLicense().isPaid())
-                .filter(f ->
-                        (f.getHistory().getPistolCounter() < 4 && f.getHistory().getRifleCounter() < 2 && f.getHistory().getShotgunCounter() < 2) ||
-                                (f.getHistory().getPistolCounter() < 2 && f.getHistory().getRifleCounter() < 4 && f.getHistory().getShotgunCounter() < 2) ||
-                                (f.getHistory().getPistolCounter() < 2 && f.getHistory().getRifleCounter() < 2 && f.getHistory().getShotgunCounter() < 4)
-                )
-                .map(Mapping::map2DTO)
-                .sorted(Comparator.comparing(MemberDTO::getSecondName, pl()).thenComparing(MemberDTO::getFirstName, pl()))
-                .collect(Collectors.toList());
+        return memberRepository.findAllWhereCLubEquals1ErasedFalsePzssTrueLicenseValidTrue().stream().filter(f -> !f.getLicense().isPaid()).filter(f -> (f.getHistory().getPistolCounter() < 4 && f.getHistory().getRifleCounter() < 2 && f.getHistory().getShotgunCounter() < 2) || (f.getHistory().getPistolCounter() < 2 && f.getHistory().getRifleCounter() < 4 && f.getHistory().getShotgunCounter() < 2) || (f.getHistory().getPistolCounter() < 2 && f.getHistory().getRifleCounter() < 2 && f.getHistory().getShotgunCounter() < 4)).map(Mapping::map2DTO).sorted(Comparator.comparing(MemberDTO::getSecondName, pl()).thenComparing(MemberDTO::getFirstName, pl())).collect(Collectors.toList());
     }
 }
